0730 미니프젝 진행중

--- a/src/components/Float.css
+++ b/src/components/Float.css
@@ -1,7 +1,10 @@
 .Float.container{
   background-color: rgb(234, 232, 229);
   display: flex;
-  margin: auto;
+  
   justify-content: space-between;
   width: 100%;
+  
+  margin-top: 20px;
+  
 }
